--- a/metrics/map.jinja
+++ b/metrics/map.jinja
@@ -1,9 +1,9 @@
-{% set bucky = salt['grains.filter_by']({
+{% set graphite = salt['grains.filter_by']({
     'Debian': {
         'carbon': 'localhost',
     },
     'default': 'Debian',
-}, merge=salt['pillar.get']('bucky',{})) %}
+}, merge=salt['pillar.get']('graphite',{})) %}
 
 
 {% set collectd = salt['grains.filter_by']({
