--- a/metrics/map.jinja
+++ b/metrics/map.jinja
@@ -1,3 +1,11 @@
+{% set grafana = salt['grains.filter_by']({
+    'Debian': {
+        'revision': 'v1.5.3',
+        'graphite': 'graphite.local',
+    },
+    'default': 'Debian',
+}, merge=salt['pillar.get']('grafana', {})) %}
+
 {% set graphite = salt['grains.filter_by']({
     'Debian': {
         'secret_key': 'updateme'
@@ -9,6 +17,7 @@
 {% set collectd = salt['grains.filter_by']({
     'Debian': {
         'carbon': 'monitoring.local',
+        'revision': '5.4.0-ppa1~precise1'
     },
     'default': 'Debian',
 }, merge=salt['pillar.get']('collectd',{})) %}
