Moved elasticsearchUrl and graphiteUrl to map.jinja

--- a/metrics/map.jinja
+++ b/metrics/map.jinja
@@ -2,6 +2,8 @@
     'Debian': {
         'revision': 'v1.5.3',
         'graphite': 'graphite.local',
+        'elasticsearchUrl': "http://"+window.location.hostname.replace(/^grafana/,'elastic-search')+":8080",
+        'graphiteUrl': "http://"+window.location.hostname.replace(/^grafana/,'graphite')+":8080"
     },
     'default': 'Debian',
 }, merge=salt['pillar.get']('grafana', {})) %}
