--- a/metrics/map.jinja
+++ b/metrics/map.jinja
@@ -1,9 +1,8 @@
 {% set grafana = salt['grains.filter_by']({
     'Debian': {
         'revision': 'v1.5.3',
-        'graphite': 'graphite.local',
-        'elasticsearchUrl': "http://"+window.location.hostname.replace(/^grafana/,'elastic-search')+":8080",
-        'graphiteUrl': "http://"+window.location.hostname.replace(/^grafana/,'graphite')+":8080"
+        'elasticsearchUrl': 'http://"+window.location.hostname.replace(/^grafana/,"elasticsearch")+":8080',
+        'graphiteUrl': 'http://"+window.location.hostname.replace(/^grafana/,"graphite")+":8080'
     },
     'default': 'Debian',
 }, merge=salt['pillar.get']('grafana', {})) %}
