--- a/metrics/map.jinja
+++ b/metrics/map.jinja
@@ -18,7 +18,8 @@
 {% set collectd = salt['grains.filter_by']({
     'Ubuntu-12.04': {
         'carbon': 'monitoring.local',
-        'revision': '5.4.0-ppa1~precise1'
+        'revision': '5.4.0-ppa1~precise1',
+        'prefix': None
     },
     'default': {
         'carbon': 'monitoring.local',
