convert to 14.04 packages, git mirrors and prebuild packages

--- a/metrics/map.jinja
+++ b/metrics/map.jinja
@@ -9,7 +9,8 @@
 
 {% set graphite = salt['grains.filter_by']({
     'Debian': {
-        'secret_key': 'updateme'
+        'secret_key': 'updateme',
+        'data': '/data/graphite'
     },
     'default': 'Debian',
 }, merge=salt['pillar.get']('graphite',{})) %}
