Fix to allow collectd.prefix on 14.04 and non-12.04 Ubuntu.
Add missing default from map.jinja to give a default value on Trusty.

--- a/metrics/map.jinja
+++ b/metrics/map.jinja
@@ -24,7 +24,8 @@
     },
     'default': {
         'carbon': 'monitoring.local',
-        'revision': False
+        'revision': False,
+        'prefix': None,
     },
 }, grain='osfinger', merge=salt['pillar.get']('collectd',{})) %}
 
