Install bucky on monitoring server and bind it to port 8126 so that we can have host independent (no monitoring hostname in key) aggregated metrics.

--- a/metrics/map.jinja
+++ b/metrics/map.jinja
@@ -18,6 +18,15 @@
 }, merge=salt['pillar.get']('graphite',{})) %}
 
 
+{% set bucky = salt['grains.filter_by']({
+    'Debian': {
+        'carbon': 'localhost',
+        'port': 8126,
+    },
+    'default': 'Debian',
+}, merge=salt['pillar.get']('bucky',{})) %}
+
+
 {% set collectd = salt['grains.filter_by']({
     'Ubuntu-12.04': {
         'carbon': 'monitoring.local',
