Have all variables in the grafana config file quoted in the same way.
This is a backwards incompatible change and for that is slightly
annoying but it means our pillars look far more consistent around how
you quote.

Rather than this:

    grafana:
      index: '"grafana-dash_" + window.location.hostname'
      elasticsearchUrl: '//"+window.location.hostname.replace(/^grafana/,"elasticsearch")+"',

We now have

    grafana:
      index: 'grafana-dash_" + window.location.hostname + "'
      elasticsearchUrl: '//"+window.location.hostname.replace(/^grafana/,"elasticsearch")+"',

--- a/metrics/map.jinja
+++ b/metrics/map.jinja
@@ -4,7 +4,7 @@
         'elasticsearchUrl': '//"+window.location.hostname.replace(/^grafana/,"elasticsearch")+(window.location.port ? ":" + window.location.port : "")+"',
         'graphiteUrl': '//"+window.location.hostname.replace(/^grafana/,"graphite")+(window.location.port ? ":" + window.location.port : "")+"',
         'default_route': '/dashboard/script/overview.js',
-        'index': '"grafana-dash"',
+        'index': 'grafana-dash',
     },
     'default': 'Debian',
 }, merge=salt['pillar.get']('grafana', {})) %}
