Add an ability to set `server_name` for the nginx virtual hosts.
This is concerns both the Graphite and Grafana services.

Signed-off-by: Krzysztof Wilczynski <krzysztof.wilczynski@linux.com>

--- a/metrics/map.jinja
+++ b/metrics/map.jinja
@@ -7,6 +7,7 @@
         'graphiteUrl': '//"+window.location.hostname.replace(/^grafana/,"graphite")+(window.location.port ? ":" + window.location.port : "")+"',
         'default_route': '/dashboard/script/overview.js',
         'index': 'grafana-dash',
+        'server_name': 'grafana.*'
     },
     'default': 'Debian',
 }, merge=salt['pillar.get']('grafana', {})) %}
@@ -15,6 +16,7 @@
     'Debian': {
         'secret_key': 'updateme',
         'data_dir': '/srv/graphite/storage',
+        'server_name': 'graphite.*'
     },
     'default': 'Debian',
 }, merge=salt['pillar.get']('graphite',{})) %}
